--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-    "name": "honkit-seed",
-    "version": "1.0.0",
-    "repository": "git@github.com:SIKS-APP/siks-app.github.io.git",
-    "author": "Showhey798 shota.gk0.123@gmail.com>",
-    "license": "MIT",
-    "devDependencies": {
-      "honkit": "^3.6.17"
-    }
+  "name": "siks-app.github.io",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:SIKS-APP/siks-app.github.io.git",
+  "author": "Showhey798 <shota.gk0.123@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "honkit": "^4.0.0"
+  },
+  "scripts":{
+    "build": "npx honkit build ./ ./honkit",
+    "start": "npx honkit serve ./ ./honkit"
   }
+}
